@@ -1,0 +1,4 @@
+package cuke4duke.annotation;
+
+public class Français {
+}
